[package]
name = "crlf"
version = "1.0.0"
edition = "2024"
description = "A commandline tool to convert line endings in files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Leawind/crlf"
keywords = ["cli", "crlf", "line-ending", "convert"]
categories = ["command-line-utilities"]
authors = ["Leawind <leawind@yeah.net>"]

[[bin]]
name = "crlf"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
glob = "0.3.2"
rayon = "1.10.0"
strum = { version = "0.27.2", features = ["derive"] }
